<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/golden_background11"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textAllCaps="true"
                android:textColor="#00ffff" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:orientation="horizontal"
                android:layout_marginStart="75dp">

                <RadioButton
                    android:id="@+id/trueRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton1True"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton1False"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textAllCaps="true"
                android:textColor="#00ffff" />


            <EditText
                android:id="@+id/russiaEditText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAllCaps="true"
                android:textColor="#00ffff"
                android:textSize="15sp"
                android:hint="@string/question2Host"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textAllCaps="true"
                android:textColor="#00ffff" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/germanyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3Germany"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3Israel"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

                <CheckBox
                    android:id="@+id/italyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3Italy"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textAllCaps="true"
                android:textColor="#00ffff" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4Spain"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4India"
                    android:textAllCaps="true"

                    android:textColor="#00ffff" />

                <RadioButton
                    android:id="@+id/uruguayRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4Uruguay"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textAllCaps="true"
                android:textColor="#00ffff" />

            <EditText
                android:id="@+id/spainEditText"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAllCaps="true"
                android:textColor="#00ffff"
                android:textSize="15sp"
                android:hint="@string/question5Hint"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question6"
                android:textAllCaps="true"
                android:textColor="#00ffff" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/brazil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6Brazil"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6Chile"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6Egypt"
                    android:textAllCaps="true"
                    android:textColor="#00ffff" />


            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:background="@layout/button"
            android:onClick="submit"
            android:text="@string/submitButton"
            android:textAllCaps="true"
            android:textColor="#00ffff"
            android:layout_marginStart="130dp" />

    </LinearLayout>

</ScrollView>